bin_PROGRAMS = gu guUnitTests

gu_SOURCES = Sources/C/gu.c\
             Sources/C/guFunctions.c\

gu_LDADD = Sources/C/Libraries/libmlcgi.a.FreeBSD.7.x

guUnitTests_SOURCES = Sources/C/guUnitTests.c\
                      Sources/C/guFunctions.c\

guUnitTests_LDADD = Sources/C/Libraries/libmlcgi.a.FreeBSD.7.x
